fixed registration form styling (the top was cut off)

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -387,6 +387,10 @@ body::before {
   padding-right: 20px;
 }
 
+.sign-in{
+  margin: 100px auto;
+}
+
 #homepage-button {
   margin: 0;
   padding: 0px;
